--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset="utf-8">
+		<link rel="icon" href="favicon.png" type="image/x-icon" href="">
 		<link href="styles/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 		<title>My test page</title>
@@ -13,20 +14,15 @@
 		<p>I chose JS to start learning programming</p>
 		<p>I also started learning HTML/CSS</p>
 
-		<p>Shopping list:</p>
+		<p><b>My scripts:</b></p>
 		<ul>
-			<li>bread;</li>
-			<li>eggs.</li>
+			<li>
+				<a href="snippets/snake.html" title="Classic game of Snake (opens up in a new tab)" target="_blank">Classic Snake<a>
+			</li>
+			<li>
+				<a href="snippets/water-ripple.html" title="Trying to simulate water ripple (opens up in a new tab)" target ="_blank">Water Ripple<a>
+			</li>
 		</ul>
-
-		<p>Recipe:</p>
-		<ol>
-			<li>do this first;</li>
-			<li>then, do that...</li>
-		</ol>
-		<p>to get the result.</p>
-
-		<p>You can read this <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> if you are interested.</p>
 
 		<button>Change user</button>
 		
