--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<li>
 				<a href="snippets/water-ripple.html" title="Trying to simulate water ripple (opens up in a new tab)" target ="_blank">Water Ripple<a>
 			</li>
+			<li>
+				<a href="snippets/breakout.html" title="Classic breakout game (opens up in a new tab)" target ="_blank">Breakout<a>
+			</li>
 		</ul>
 
 		<button>Change user</button>
