--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 			<li>
 				<a href="snippets/breakout.html" title="Classic breakout game (opens up in a new tab)" target ="_blank">Breakout<a>
 			</li>
+			<li>
+				<a href="snippets/pong.html" title="Classic game of Ping Pong (opens up in a new tab)" target="_blank">Ping Pong<a>
+			</li>
 		</ul>
 
 		<button>Change user</button>
