--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<link rel="icon" href="favicon.png" type="image/x-icon" href="">
+		<link rel="icon" href="favicon.png" type="image/x-icon">
 		<link href="styles/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 		<title>My test page</title>
