--- a/snippets/pong.html
+++ b/snippets/pong.html
@@ -15,4 +15,5 @@
 		<h3>Arrow UP / Arrow DOWN = up / down for P2</h3>
 		<h3>SPACE = serve the ball (only after scoring a point)</h2>
 		<h3>ENTER = reset (anytime)</h2>
+	</body>
 </html>
