--- a/snippets/pong.html
+++ b/snippets/pong.html
@@ -36,6 +36,6 @@
 		</div>
 		
 		<script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-		<script src="scripts/pong.js"></script>
+		<script src="../scripts/pong.js"></script>
 	</body>
 </html>
