--- a/snippets/pong.html
+++ b/snippets/pong.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
-		<link href="styles/pong-style.css" rel="stylesheet">
+		<link href="../styles/pong-style.css" rel="stylesheet">
 		<title>PONG</title>
 	</head>
 
