--- a/snippets/pong.html
+++ b/snippets/pong.html
@@ -16,7 +16,7 @@
 			<div class="left">
 				<span id="left-span">
 					<h3 class="text-right">Player 1 Controls:</h3>
-					<h3 class="text-right">W / S = up / down for P1</h3>
+					<h3 class="text-right">W / S = up / down</h3>
 				</span>
 			</div>
 			
@@ -25,7 +25,7 @@
 			<div class="right">
 				<span id="right-span">
 					<h3 class="text-left">Player 2 Controls:</h3>
-					<h3 class="text-left">W / S = up / down for P1</h3>
+					<h3 class="text-left">ARROW UP / ARROW DOWN = up / down</h3>
 				</span>	
 			</div>
 
