--- a/snippets/pong.html
+++ b/snippets/pong.html
@@ -25,7 +25,7 @@
 			<div class="right">
 				<span id="right-span">
 					<h3 class="text-left">Player 2 Controls:</h3>
-					<h3 class="text-left">ARROW UP / ARROW DOWN = up / down</h3>
+					<h3 class="text-left">ARROW UP / ARROW DOWN</h3>
 				</span>	
 			</div>
 
