--- a/snippets/water-ripple.html
+++ b/snippets/water-ripple.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Water ripple</title>
 	<meta charset="utf-8">
-	<meta author="Andrey Rekk" description="JS Water Circles">
+	<meta description="JS Water Circles">
 
 </head>
 
